# crypto-price-forecasting

./: CITATION.cff  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: index.html
experiments/: run_cross_asset_pipeline.py  run_price_data_setup.py  run_price_family_pipeline.py
src/crypto_price_forecasting/: __init__.py  arima.py  baselines.py  comparison.py  config.py  cross_asset.py  data.py  dm_test.py  ets.py  metrics.py  neural.py  visualization.py
tests/: test_smoke.py
